--- a/style/abstracts/_variables.scss
+++ b/style/abstracts/_variables.scss
@@ -24,38 +24,26 @@ $neutral-10: #fbfbfb;
 $neutral-0: #fff;
 
 // Spacing
-$margin-1: 16px;
-$margin-2: calc(16px * 2);
-$margin-3: calc(16px * 3);
-$margin-4: calc(16px * 4);
-$margin-5: calc(16px * 5);
-$margin-6: calc(16px * 6);
-$margin-7: calc(16px * 7);
-$margin-8: calc(16px * 8);
-$margin-9: calc(16px * 9);
-$margin-10: calc(16px * 10);
-$margin-11: calc(16px * 11);
-$margin-12: calc(16px * 12);
-$margin-13: calc(16px * 13);
-$margin-14: calc(16px * 14);
-$margin-15: calc(16px * 15);
-$padding-1: 16px;
-$padding-2: calc(16px * 2);
-$padding-3: calc(16px * 3);
-$padding-4: calc(16px * 4);
-$padding-5: calc(16px * 5);
-$padding-6: calc(16px * 6);
-$padding-7: calc(16px * 7);
-$padding-8: calc(16px * 8);
-$padding-9: calc(16px * 9);
-$padding-10: calc(16px * 10);
-$padding-11: calc(16px * 11);
-$padding-12: calc(16px * 12);
-$padding-13: calc(16px * 13);
-$padding-14: calc(16px * 14);
-$padding-15: calc(16px * 15);
+$spacing-1: 16px;
+$spacing-2: calc(16px * 2);
+$spacing-3: calc(16px * 3);
+$spacing-4: calc(16px * 4);
+$spacing-5: calc(16px * 5);
+$spacing-6: calc(16px * 6);
+$spacing-7: calc(16px * 7);
+$spacing-8: calc(16px * 8);
+$spacing-9: calc(16px * 9);
+$spacing-10: calc(16px * 10);
+$spacing-11: calc(16px * 11);
+$spacing-12: calc(16px * 12);
+$spacing-13: calc(16px * 13);
+$spacing-14: calc(16px * 14);
+$spacing-15: calc(16px * 15);
+
+//Font
 $font-stack-primary: "Lato", sans-serif;
 $font-stack-secondary: "Raleway", sans-serif;
 $bolder: 800;
 $bold: 700;
 $regular: 400;
+$breakpoint-tablet: 768px;
