Add header and footer sections

--- a/style/style.scss
+++ b/style/style.scss
@@ -7,6 +7,9 @@
 @import "base/index";
 @import "base/typography";
 
+//Components
+@import "components/button";
+
 //layout
 @import "layout/navigation";
 @import "layout/container";
