--- a/style/base/_typography.scss
+++ b/style/base/_typography.scss
@@ -7,13 +7,15 @@ h1 {
 h2 {
   font-family: $font-stack-primary;
   font-size: 32px;
+  font-weight: $regular;
   line-height: 1.3;
 }
 
 h3 {
   font-family: $font-stack-primary;
-  font-size: 24px;
+  font-size: 20px;
   line-height: 1.6;
+  font-weight: $regular;
   text-transform: uppercase;
 }
 
