--- a/style/style.css
+++ b/style/style.css
@@ -146,13 +146,15 @@ h1 {
 h2 {
   font-family: "Lato", sans-serif;
   font-size: 32px;
+  font-weight: 400;
   line-height: 1.3;
 }
 
 h3 {
   font-family: "Lato", sans-serif;
-  font-size: 24px;
+  font-size: 20px;
   line-height: 1.6;
+  font-weight: 400;
   text-transform: uppercase;
 }
 
@@ -221,6 +223,18 @@ a {
   transition: all 0.4s ease 0s;
 }
 
+.hr-primary {
+  margin-top: 16px;
+  border: 1px solid #ec5242;
+  width: 10%;
+}
+
+.hr-neutral {
+  margin-top: 16px;
+  border: 1px solid #e9e9e9;
+  width: 10%;
+}
+
 .primary-nav .container-header > nav {
   display: flex;
   justify-content: space-between;
@@ -230,7 +244,7 @@ a {
 }
 
 .container {
-  padding: calc(16px * 2) calc(16px * 6);
+  padding: calc(16px * 5) calc(16px * 2);
 }
 
 .container-header {
@@ -248,4 +262,71 @@ footer .container .footer-logo {
 }
 footer .container > * {
   padding: 16px;
+}
+
+.headline .headline-h1 {
+  margin-top: 16px;
+  font-weight: 800;
+  font-family: "Raleway", sans-serif;
+  color: #ec5242;
+}
+.headline .headline-h2 {
+  font-weight: 800;
+  font-family: "Raleway", sans-serif;
+  padding-top: 16px;
+}
+.headline .headline-h3 {
+  color: #ec5242;
+}
+.headline .headline-box {
+  margin-top: 16px;
+  padding: 1rem;
+  border: 3px solid #fff;
+}
+.headline .headline-location {
+  padding-top: 16px;
+  font-size: calc($spacing-1 + 4px);
+  font-weight: 700;
+}
+
+.highlight {
+  background-color: #272a31;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='60' height='60' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%231f2227' fill-opacity='0.4'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  color: #e9e9e9;
+  display: block;
+  text-align: center;
+}
+.highlight .highlight-ul .highlight-li {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: rgba(233, 233, 233, 0.1);
+  margin-top: 16px;
+  padding: 16px;
+}
+.highlight .highlight-ul .highlight-li .highlight-span {
+  font-size: 40px;
+  flex: 10%;
+  text-align: center;
+}
+.highlight .highlight-ul .highlight-li .highlight-h3 {
+  color: #ec5242 !important;
+  flex: 20%;
+  text-align: end;
+  text-transform: capitalize;
+}
+.highlight .highlight-ul .highlight-li .highlight-p {
+  flex: 50%;
+  text-align: end;
+}
+.highlight .highlight-button {
+  margin: 0 auto;
+  margin-top: calc(16px * 3);
+}
+
+.artists .artists-h2 {
+  text-align: center;
+}
+.artists .artists-p {
+  text-align: center;
 }/*# sourceMappingURL=style.css.map */
