--- a/style/layout/_footer.scss
+++ b/style/layout/_footer.scss
@@ -1,3 +1,29 @@
+.partners {
+  background-color: $secondary-100;
+
+  .partners-h2 {
+    text-align: center;
+    color: $neutral-10;
+  }
+
+  .partners-ul {
+    padding: 16px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    .partners-li {
+      padding: 16px;
+      color: $neutral-50;
+
+      .partners-li-img {
+        height: 40px;
+        width: auto;
+      }
+    }
+  }
+}
+
 footer {
   .container {
     display: flex;
