--- a/style/style.css
+++ b/style/style.css
@@ -251,6 +251,28 @@ a {
   padding: calc(16px * 2);
 }
 
+.partners {
+  background-color: #272a31;
+}
+.partners .partners-h2 {
+  text-align: center;
+  color: #fbfbfb;
+}
+.partners .partners-ul {
+  padding: 16px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.partners .partners-ul .partners-li {
+  padding: 16px;
+  color: #e9e9e9;
+}
+.partners .partners-ul .partners-li .partners-li-img {
+  height: 40px;
+  width: auto;
+}
+
 footer .container {
   display: flex;
   justify-content: center;
@@ -329,4 +351,115 @@ footer .container > * {
 }
 .artists .artists-p {
   text-align: center;
+}
+
+.about {
+  text-align: center;
+}
+.about h3 {
+  color: #ec5242;
+  text-transform: uppercase;
+}
+.about h1 {
+  margin-top: 16px;
+  font-weight: 800;
+  font-family: "Raleway", sans-serif;
+  color: #ec5242;
+  text-transform: uppercase;
+}
+.about .about-box {
+  background-color: white;
+  margin-top: 16px;
+  padding: 1rem;
+  border: 2px solid #e9e9e9;
+}
+@media (min-width: 768px) {
+  .about .about-box {
+    margin: 16px 50px;
+  }
+}
+.about .about-contact {
+  margin: 16px 25px;
+}
+.about a {
+  color: #272a31;
+  text-decoration: underline;
+  font-weight: 700;
+}
+.about a:hover {
+  color: #ec5242;
+}
+
+.logo-about {
+  text-align: center;
+  background-color: #fff;
+  border-bottom: 1px solid #d3d3d3;
+}
+.logo-about .logo-about-p {
+  margin-top: 16px;
+}
+.logo-about .logo-container {
+  margin-top: 16px;
+  display: flex;
+  border: 1px solid #d3d3d3;
+  width: 100%;
+  justify-content: center;
+  padding: 40px 0;
+}
+.logo-about .logo-container .logo-container-span {
+  font-size: 40px;
+}
+.logo-about .logo-container .logo-container-h1 {
+  font-size: 40px;
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  color: #ec5242;
+}
+.logo-about .logo-container .logo-container-h1 span {
+  color: #272a31;
+}
+
+.past-about {
+  text-align: center;
+  background-color: #fff;
+}
+.past-about .past-about-p {
+  margin-top: 16px;
+}
+.past-about .past-about-ul {
+  margin-top: 16px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.past-about .past-about-ul .past-about-li {
+  width: 100%;
+  height: auto;
+  color: #fff;
+  margin: 14px 0;
+  padding: 50px 30px;
+  background-attachment: fixed;
+}
+@media (min-width: 768px) {
+  .past-about .past-about-ul .past-about-li {
+    flex: 1;
+    margin: 16px;
+  }
+}
+.past-about .past-about-ul .past-about-li .past-about-li-h2 {
+  font-weight: 800;
+  font-family: "Raleway", sans-serif;
+}
+.past-about .past-about-ul .past-about-li .past-about-li-p {
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+}
+.past-about .past-about-ul .past-about-li:nth-child(1) {
+  background-image: linear-gradient(rgba(236, 82, 66, 0.7), rgba(236, 82, 66, 0.7)), url(../../../assets/png/concert2.jpg);
+  background-size: cover;
+}
+.past-about .past-about-ul .past-about-li:nth-child(2) {
+  background-image: linear-gradient(rgba(236, 82, 66, 0.6), rgba(236, 82, 66, 0.6)), url(../../../assets/png/concert2.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
 }/*# sourceMappingURL=style.css.map */
