--- a/style/pages/_about.scss
+++ b/style/pages/_about.scss
@@ -1,10 +1,12 @@
 .about {
   text-align: center;
-  h3 {
+
+  .about-h3 {
     color: $primary-100;
     text-transform: uppercase;
   }
-  h1 {
+
+  .about-h1 {
     margin-top: 16px;
     font-weight: $bolder;
     font-family: $font-stack-secondary;
@@ -17,6 +19,7 @@
     margin-top: 16px;
     padding: 1rem;
     border: 2px solid $neutral-50;
+
     @media (min-width: $breakpoint-tablet) {
       margin: 16px 50px;
     }
@@ -26,10 +29,11 @@
     margin: 16px 25px;
   }
 
-  a {
+  .about-contact-a {
     color: $secondary-100;
     text-decoration: underline;
     font-weight: $bold;
+
     &:hover {
       color: $primary-100;
     }
