--- a/style/layout/_container.scss
+++ b/style/layout/_container.scss
@@ -1,7 +1,15 @@
 .container {
   padding: $spacing-5 $spacing-2;
+
+  @media (min-width: $breakpoint-tablet) {
+    padding: $spacing-5 $spacing-12;
+  }
 }
 
 .container-header {
   padding: $spacing-2;
+
+  @media (min-width: $breakpoint-tablet) {
+    padding: $spacing-2 $spacing-12;
+  }
 }
