--- a/style/layout/_navigation.scss
+++ b/style/layout/_navigation.scss
@@ -95,3 +95,49 @@
     }
   }
 }
+
+.mobile-menu {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  background-color: rgb($secondary-100, 0.99);
+  overflow-x: hidden;
+  transition: 0.5s;
+
+  .mobile-menu-nav {
+    .mobile-menu-btn {
+      font-size: 40px;
+      position: absolute;
+      top: 20px;
+      right: 24px;
+    }
+
+    .mobile-menu-ul {
+      padding-top: 48px;
+
+      .mobile-menu-li {
+        margin-bottom: 16px;
+
+        .mobile-menu-a {
+          color: $neutral-50;
+          font-size: 30px;
+          letter-spacing: 1px;
+          font-weight: $bold;
+          transition: all 0.4s ease 0s;
+
+          &:hover {
+            color: $primary-100;
+            transition: all 0.4s ease 0s;
+          }
+        }
+      }
+    }
+  }
+
+  @media (min-width: $breakpoint-tablet) {
+    display: none;
+  }
+}
