--- a/style/style.scss
+++ b/style/style.scss
@@ -1,21 +1,21 @@
 // Abstracts
-@import "abstracts/fonts";
-@import "abstracts/variables";
+@import 'abstracts/fonts';
+@import 'abstracts/variables';
 
 //Base
-@import "base/reset";
-@import "base/index";
-@import "base/typography";
+@import 'base/reset';
+@import 'base/index';
+@import 'base/typography';
 
 //Components
-@import "components/button";
-@import "components/utils";
+@import 'components/button';
+@import 'components/utils';
 
 //layout
-@import "layout/navigation";
-@import "layout/container";
-@import "layout/footer";
+@import 'layout/container';
+@import 'layout/navigation';
+@import 'layout/footer';
 
 //pages
-@import "pages/home";
-@import "pages/about";
+@import 'pages/home';
+@import 'pages/about';
