Update artists section to dynamic html

--- a/style/abstracts/_variables.scss
+++ b/style/abstracts/_variables.scss
@@ -41,8 +41,8 @@ $spacing-14: calc(16px * 14);
 $spacing-15: calc(16px * 15);
 
 //Font
-$font-stack-primary: "Lato", sans-serif;
-$font-stack-secondary: "Raleway", sans-serif;
+$font-stack-primary: 'Lato', sans-serif;
+$font-stack-secondary: 'Raleway', sans-serif;
 $bolder: 800;
 $bold: 700;
 $regular: 400;
