--- a/style/components/_utils.scss
+++ b/style/components/_utils.scss
@@ -1,11 +1,11 @@
 .hr-primary {
   margin-top: 16px;
   border: 1px solid $primary-100;
-  width: 10%;
+  width: 30px;
 }
 
 .hr-neutral {
-  margin-top: 16px;
+  margin-top: 10px;
   border: 1px solid $neutral-50;
-  width: 10%;
+  width: 20px;
 }
