--- a/style/layout/_container.scss
+++ b/style/layout/_container.scss
@@ -13,3 +13,9 @@
     padding: $spacing-2 $spacing-12;
   }
 }
+
+.container-sec-header {
+  @media (min-width: $breakpoint-tablet) {
+    padding: $spacing-1 $spacing-12;
+  }
+}
