--- a/style/layout/_navigation.scss
+++ b/style/layout/_navigation.scss
@@ -1,5 +1,5 @@
 .primary-nav {
-  box-shadow: 0 1px 5px 1px rgba(0, 0, 0, 0.1), 0 2px 15px 0 rgba(0, 0, 0, 0.09);
+  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.1);
 
   .container-header {
     display: flex;
@@ -48,13 +48,36 @@
       .nav-li {
         margin-left: $spacing-2;
 
-        .nav-a {
+        a {
           color: $secondary-100;
           transition: all 0.4s ease 0s;
+        }
+
+        .nav-a {
+          position: relative;
+
+          &::after {
+            content: '';
+            position: absolute;
+            width: 0;
+            height: 3px;
+            display: block;
+            margin-top: 5px;
+            right: 0;
+            background: $primary-100;
+            transition: width 0.2s ease;
+            -webkit-transition: width 0.2s ease;
+          }
 
           &:hover {
             color: $primary-100;
             transition: all 0.4s ease 0s;
+          }
+
+          &:hover::after {
+            width: 100%;
+            left: 0;
+            background: $primary-100;
           }
         }
       }
