--- a/style/pages/_about.scss
+++ b/style/pages/_about.scss
@@ -55,14 +55,13 @@
     border: 1px solid $neutral-100;
     width: 100%;
     justify-content: center;
-    padding: $spacing-2 0;
+    padding: $spacing-2 $spacing-4;
 
     .logo-container-span {
       font-size: 40px;
     }
 
     .logo-container-h1 {
-      font-size: 40px;
       font-family: $font-stack-secondary;
       font-weight: $bolder;
       color: $primary-100;
@@ -113,7 +112,8 @@
     }
 
     .past-about-li:nth-child(1) {
-      background-image: linear-gradient(
+      background-image:
+        linear-gradient(
           rgba($primary-100, 0.7),
           rgba($primary-100, 0.7)
         ),
@@ -122,7 +122,8 @@
     }
 
     .past-about-li:nth-child(2) {
-      background-image: linear-gradient(
+      background-image:
+        linear-gradient(
           rgba($primary-100, 0.6),
           rgba($primary-100, 0.6)
         ),
