--- a/style/style.css
+++ b/style/style.css
@@ -651,10 +651,10 @@ footer .container-footer > * {
   padding: calc(16px * 2) 0;
 }
 .logo-about .logo-container .logo-container-span {
-  font-size: 40px;
+  font-size: 3em;
 }
 .logo-about .logo-container .logo-container-h1 {
-  font-size: 40px;
+  font-size: 3em;
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   color: #ec5242;
