Fix linter errors

--- a/style/pages/_about.scss
+++ b/style/pages/_about.scss
@@ -113,7 +113,8 @@
     }
 
     .past-about-li:nth-child(1) {
-      background-image: linear-gradient(
+      background-image:
+        linear-gradient(
           rgba($primary-100, 0.7),
           rgba($primary-100, 0.7)
         ),
@@ -122,7 +123,8 @@
     }
 
     .past-about-li:nth-child(2) {
-      background-image: linear-gradient(
+      background-image:
+        linear-gradient(
           rgba($primary-100, 0.6),
           rgba($primary-100, 0.6)
         ),
