--- a/style/pages/_home.scss
+++ b/style/pages/_home.scss
@@ -1,5 +1,6 @@
 .headline {
-  background-image: linear-gradient(
+  background-image:
+    linear-gradient(
       to bottom,
       rgba(246, 246, 246, 0.9) 0%,
       rgba(246, 246, 246, 1) 30%
